<resources>
    <string name="app_name">MindMattersApp</string>
    <string name="welcome">Bienvenido a Mind Matters App</string>
    <string name="entrar">Entrar</string>
    <string name="login">Inicio de Sesión</string>
    <string name="a">a</string>
    <string name="tv_registro">Regístrate</string>
    <string name="tv_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_forgottenpass">Olvidé mi contraseña</string>
    <string name="tv_registro2">Registro</string>
    <string name="btn_registro">Regístrate</string>
    <string name="mensaje_main_diario">Aquí va a ir chagüite xd</string>
    <string name="bienvenido_diario">Bienvenido a tu Diario</string>
    <string name="conf">Te hemos enviado un mensaje de confirmación a través del correo electrónico proporcionado.</string>
    <string name="pwd">Contraseña</string>
    <string name="email">Email</string>
    <string name="confirmar">Confirmar contraseña</string>

    <string name="nomcom">Nombre completo</string>
    <string name="directorio">Directorio</string>
    <string name="mind_matters">Mind Matters</string>
    <string name="bienestar">Bienestar</string>

    <!--FORUM ACTIVITY STRINGS-->
    <string name="forumWelcome">Hola</string>
    <string name="forumMessage">Puedes buscar temas de tu interes en los foros.</string>
    <string name="forumHint">Buscar...</string>
</resources>