<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvForumWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintStart_toStartOf=""
        app:layout_constraintBottom_toBottomOf=""
        app:layout_constraintEnd_toEndOf=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf=""
        app:layout_constraintTop_toBottomOf=""
        android:text="@string/forumWelcome"
        android:textSize="44sp"
        android:fontFamily="@font/googlesans_bold"
        android:textColor="@color/navy_blue"
        android:paddingTop="30dp"/>

    <TextView
        android:id="@+id/tvForumMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintStart_toStartOf="@id/tvForumWelcome"
        app:layout_constraintBottom_toBottomOf=""
        app:layout_constraintEnd_toEndOf="@id/tvForumWelcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf=""
        app:layout_constraintEnd_toStartOf=""
        app:layout_constraintTop_toBottomOf="@id/tvForumWelcome"
        android:text="@string/forumMessage"
        android:textSize="16sp"
        android:fontFamily="@font/googlesans_bold"
        android:textColor="@color/teal"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:id="@+id/lySearchBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintStart_toStartOf="@id/tvForumMessage"
        app:layout_constraintBottom_toBottomOf=""
        app:layout_constraintEnd_toEndOf="@id/tvForumMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf=""
        app:layout_constraintEnd_toStartOf=""
        app:layout_constraintTop_toBottomOf="@id/tvForumMessage"
        android:layout_marginTop="15dp"
        android:background="@drawable/corners">

        <ImageButton
            android:id="@+id/btnSearchTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:background="@drawable/corners"
            android:scaleType="centerInside"
            android:padding="10dp"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/etSearchTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forumHint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:fontFamily="@font/googlesans"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTopics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintStart_toStartOf="@id/tvForumMessage"
        app:layout_constraintBottom_toBottomOf=""
        app:layout_constraintEnd_toEndOf="@id/tvForumMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf=""
        app:layout_constraintEnd_toStartOf=""
        app:layout_constraintTop_toBottomOf="@id/lySearchBox"
        android:layout_marginTop="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>